# wsl-dev-setup-assistant

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/domain/: command_result.py  distro.py
app/screens/: distro_screen.py  first_run_screen.py  terminal_screen.py  welcome_screen.py  wsl_check_screen.py
app/services/: async_command_service.py  command_runner.py  devsetup_service.py  platform_service.py  wsl_service.py
app/ui/: loading_overlay.py  navigation_bar.py  page_container.py  screen_menu.py  stepper.py  terminal_widget.py
dev_setup_launcher.egg-info/: SOURCES.txt  requires.txt
